3_TypeChecking/test/good/good02.cc
int main() {
	int i = 0;
	bool b = true;
	double d = 3.14;
	string s = "MyString";
}